<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginBottom="30dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/image_movie"
            android:layout_width="373dp"
            android:layout_height="232dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_realname"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:layout_marginTop="5dp"
            android:background="#00BCD4"
            android:gravity="center"
            android:text="@string/realname"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/image_movie"
            app:layout_constraintStart_toStartOf="@+id/image_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_name" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#F1E468"
            android:fontFamily="@font/wallpoet"
            android:gravity="center"
            android:rotationX="8"
            android:text="@string/name"
            android:textAllCaps="true"
            android:textColor="#C11414"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_movie"
            app:layout_constraintStart_toStartOf="@+id/image_movie"
            app:layout_constraintTop_toBottomOf="@+id/image_movie" />

        <TextView
            android:id="@+id/txt_team"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#DEF2F4"
            android:gravity="center"
            android:text="@string/team"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/image_movie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/image_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_realname" />

        <TextView
            android:id="@+id/txt_createdby"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#00BCD4"
            android:gravity="center"
            android:text="@string/createdby"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/image_movie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/image_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_team" />

        <TextView
            android:id="@+id/txt_publisher"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#DEF2F4"
            android:gravity="center"
            android:text="@string/publisher"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/image_movie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/image_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_createdby" />

        <TextView
            android:id="@+id/txt_apperance"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="3dp"
            android:background="#00BCD4"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/firstapperance"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/image_movie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/image_movie"
            app:layout_constraintTop_toBottomOf="@+id/txt_publisher" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>